# desktop-sync-client

./: .clangd  .gitignore  CMakeLists.txt  build.bat  build_using_clang.bat  build_using_gcc.bat
.cache/clangd/index/: ApiClient.cpp.932AB54D5E75010D.idx  ApiClient.cpp.A4CD952F2F22BE34.idx  ApiClient.hpp.588A019EA9EF9F37.idx  ApiClient.hpp.A744F576C23FAB5B.idx  DatabaseManager.cpp.5366D5385A9C9030.idx  DatabaseManager.cpp.D85B10C1DFA06993.idx  DatabaseManager.hpp.32CC87251D64B31B.idx  DatabaseManager.hpp.D49F36B047E5BACD.idx  FileSystemScanner.cpp.F0BC77133E26A0B9.idx  FileSystemScanner.cpp.F1CBE8B8589B7399.idx  FileSystemScanner.hpp.2611376C8594143C.idx  FileSystemScanner.hpp.3BC0504D0ED3AC97.idx  FilesystemWatcher.cpp.0591DFEED98C82AB.idx  FilesystemWatcher.cpp.7672CD363ADC5957.idx  FilesystemWatcher.hpp.37924646367C7D20.idx  FilesystemWatcher.hpp.F884EE5D8EDAFA1C.idx  ReconciliationService.cpp.913DAF6FB12AE868.idx  ReconciliationService.cpp.FFE467E70C2D969A.idx  ReconciliationService.hpp.128C1D5F1514E8BC.idx  ReconciliationService.hpp.44498D2CB91ED685.idx  UuidUtils.hpp.9347A2C3091FAC58.idx  UuidUtils.hpp.FA5BE78827FC0BFD.idx  httplib.h.445D75E5A890177F.idx  httplib.h.888073E1CADC9FBC.idx  json.hpp.220BC7309BDA0BAA.idx  json.hpp.4F5CCA6B7E4D1F7B.idx  (+12 more)
include/: ApiClient.hpp  DatabaseManager.hpp  FileSystemScanner.hpp  FilesystemWatcher.hpp  ReconciliationService.hpp  SyncWorker.hpp  UuidUtils.hpp  types.hpp
src/: ApiClient.cpp  DatabaseManager.cpp  FileSystemScanner.cpp  FilesystemWatcher.cpp  ReconciliationService.cpp  SyncWorker.cpp  main.cpp
